// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesPage should match snapshot and render CategoryTiles if the path is the root category 1`] = `
<div>
  <Breadcrumbs
    locations={
      Array [
        LocationModel {
          "_code": "augsburg",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Augsburg",
          "_sortCategory": "A",
          "_sortKey": "augsburg",
        },
        LocationModel {
          "_code": "regensburg",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Stadt Regensburg",
          "_sortCategory": "R",
          "_sortKey": "regensburg",
        },
        LocationModel {
          "_code": "werne",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Werne",
          "_sortCategory": "W",
          "_sortKey": "werne",
        },
      ]
    }
    parents={Array []}
  />
  <Tiles
    tiles={
      Array [
        TileModel {
          "_id": 3649,
          "_isExternalUrl": false,
          "_name": "Willkommen",
          "_path": "/augsburg/de/willkommen",
          "_thumbnail": "third_thumbnail",
        },
        TileModel {
          "_id": 3650,
          "_isExternalUrl": false,
          "_name": "Anlaufstellen zu sonstigen Themen",
          "_path": "/augsburg/de/anlaufstellen",
          "_thumbnail": "https://cms.integreat-ap…/03/Hotline-150x150.png",
        },
      ]
    }
    title="Augsburg"
  />
  <PdfButton
    href="/augsburg/en/fetch-pdf?url=/augsburg/de"
  />
</div>
`;

exports[`CategoriesPage should match snapshot and render a Page if page has no children 1`] = `
<div>
  <Breadcrumbs
    locations={
      Array [
        LocationModel {
          "_code": "augsburg",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Augsburg",
          "_sortCategory": "A",
          "_sortKey": "augsburg",
        },
        LocationModel {
          "_code": "regensburg",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Stadt Regensburg",
          "_sortCategory": "R",
          "_sortKey": "regensburg",
        },
        LocationModel {
          "_code": "werne",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Werne",
          "_sortCategory": "W",
          "_sortKey": "werne",
        },
      ]
    }
    parents={
      Array [
        Object {
          "availableLanguages": Object {},
          "content": "",
          "id": 0,
          "order": -1,
          "parentId": -1,
          "parentUrl": "",
          "thumbnail": "no_thumbnail",
          "title": "augsburg",
          "url": "/augsburg/de",
        },
        Object {
          "availableLanguages": Object {
            "ar": 4819,
            "en": 4804,
            "fa": 4827,
          },
          "content": "",
          "id": 3649,
          "order": 11,
          "parentId": 0,
          "parentUrl": "/augsburg/de",
          "thumbnail": "third_thumbnail",
          "title": "Willkommen",
          "url": "/augsburg/de/willkommen",
        },
      ]
    }
  />
  <Page
    content="some content"
    title="Willkommen in Augsburg"
  />
  <PdfButton
    href="/augsburg/en/fetch-pdf?url=/augsburg/de/willkommen/willkommen-in-augsburg"
  />
</div>
`;

exports[`CategoriesPage should match snapshot and render an Error if path is not valid 1`] = `
<Translate(Failure)
  error="not-found:page.notFound"
/>
`;

exports[`CategoriesPage should match snapshot render a CategoryList if the category is neither the root nor has children 1`] = `
<div>
  <Breadcrumbs
    locations={
      Array [
        LocationModel {
          "_code": "augsburg",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Augsburg",
          "_sortCategory": "A",
          "_sortKey": "augsburg",
        },
        LocationModel {
          "_code": "regensburg",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Stadt Regensburg",
          "_sortCategory": "R",
          "_sortKey": "regensburg",
        },
        LocationModel {
          "_code": "werne",
          "_eventsEnabled": false,
          "_extrasEnabled": false,
          "_live": false,
          "_name": "Werne",
          "_sortCategory": "W",
          "_sortKey": "werne",
        },
      ]
    }
    parents={
      Array [
        Object {
          "availableLanguages": Object {},
          "content": "",
          "id": 0,
          "order": -1,
          "parentId": -1,
          "parentUrl": "",
          "thumbnail": "no_thumbnail",
          "title": "augsburg",
          "url": "/augsburg/de",
        },
      ]
    }
  />
  <CategoryList
    categories={
      Array [
        Object {
          "children": Array [],
          "model": Object {
            "availableLanguages": Object {
              "ar": 397,
              "de": 711,
              "en": 390,
            },
            "content": "some content",
            "id": 35,
            "order": 1,
            "parentId": 3649,
            "parentUrl": "/augsburg/de/willkommen",
            "thumbnail": "https://cms.integreat-ap…09/heart295-150x150.png",
            "title": "Willkommen in Augsburg",
            "url": "/augsburg/de/willkommen/willkommen-in-augsburg",
          },
        },
      ]
    }
    content=""
    title="Willkommen"
  />
  <PdfButton
    href="/augsburg/en/fetch-pdf?url=/augsburg/de/willkommen"
  />
</div>
`;
